--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   get: ^4.6.5
   cloud_firestore: ^4.0.2
+  google_fonts: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
